// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expense list with empty list 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        no expenses
      </span>
    </div>
  </div>
</div>
`;

exports[`should render expense list with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={195}
      created={0}
      description="gum"
      id="1"
      key="1"
      note="gum note"
    />
    <ExpenseListItem
      amount={109500}
      created={-345600000}
      description="rent"
      id="2"
      key="2"
      note="rent note"
    />
    <ExpenseListItem
      amount={40000}
      created={345600000}
      description="credit card"
      id="3"
      key="3"
      note="credit card note"
    />
  </div>
</div>
`;
